CSS::Sass (3.4.7)

  * Bumped libsass version to latest 3.4 stable branch (3.4.6)
  * Patch spec runner to skip expected failures (missing warnings)

-- Marcel Greter <perl-libsass@ocbnet.ch>  Mon, 16 Oct 2017 00:22:52 +0200

CSS::Sass (3.4.6)

  * Bumped libsass version to latest 3.4 stable branch (3.4.5)
  * Fix spec runner to recognize specific error-cases
  * Improve gcc compiler version detection

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Mon, 22 Mai 2017 21:58:11 +0100

CSS::Sass (3.4.5)

  * Bumped libsass version to latest 3.4 stable branch (3.4.4)
  * Improve Makefile.PL to check gcc version (and other fixes)

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Sun, 09 Apr 2017 01:16:37 +0100

CSS::Sass (3.4.4)

  * Bumped libsass version to temporary 3.4 stable branch
  * Re-added gcc 4.4 compatibility for libsass (cpan release only)

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Tue, 07 Mar 2017 15:36:05 +0200

CSS::Sass (3.4.3)

  * Meta files once again got corrupted!?

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Min, 20 Feb 2017 09:51:23 +0200

CSS::Sass (3.4.2)

  * Fix build issue with plugins on OSX (#28)
  * Fix plugin loader when plugins are disabled
  * Update all plugins to their latest versions
  * Improve spec runner to cover all warnings and errors

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Wed, 15 Feb 2017 01:02:58 +0200

CSS::Sass (3.4.1)

  * Update to latest LibSass release (3.4.3)
  * Remove undocumented `resolve_file` function
  * Bundle experimental LibSass plugins (alpha)
  * Improve command line utility for plugins
  * Fix tests due to wrong skip count (Perl < 5.12)
  * Fix AND/OR operations and enable test case

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Wed, 11 Jan 2017 14:18:43 +0200

CSS::Sass (3.4.0)

  * Update to latest LibSass release (3.4.0)
  * Add source-map-file-urls option to cli
  * Change cli options to be case sensitive
  * Fix issue connected to EUMM bugfix
  * Update spec runner for nested options