@@ -69,7 +69,7 @@ our @EXPORT = qw(
 	SASS2SCSS_CONVERT_COMMENT
 );
 
-our $VERSION = "3.4.7";
+our $VERSION = "3.4.8";
 
 require XSLoader;
 XSLoader::load('CSS::Sass', $VERSION);
