@@ -24,7 +24,7 @@ use warnings;
 
 ################################################################################
 package CSS::Sass::Plugins;
-our $VERSION = "3.4.7";
+our $VERSION = "3.4.8";
 ################################################################################
 # collect plugins
 our %plugins;
